--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,10 @@ packages = bytellama
 max_line_length = 160
 exclude = tests/*
 
+[entry_points]
+console_scripts = 
+    bytellama = bytellama.model:cli
+
 [options]
 python_requires = >=3.9
 install_requires =
