--- a/configs/bytellama.yaml
+++ b/configs/bytellama.yaml
@@ -9,9 +9,9 @@
 # you can run:
 #   tune run --nproc_per_node 4 full_finetune_distributed --config bytellama checkpointer.checkpoint_dir=<YOUR_CHECKPOINT_DIR>
 #
-# ByteLlama is *tiny*. You can fit it with batch size of 32 onto a A40 GPU when
+# ByteLlama is *tiny*. You can fit it with batch size of 38 onto a A40 GPU when
 # using bf16 precision. To adjust to your actual available memory:
-#   tune run --nproc_per_node 4 full_finetune_distributed --config bytellama batch_size=32
+#   tune run --nproc_per_node 4 full_finetune_distributed --config bytellama batch_size=16
 
 # Tokenizer
 tokenizer:
@@ -46,8 +46,8 @@ checkpointer:
 resume_from_checkpoint: False
 
 # Fine-tuning arguments
-batch_size: 32
-epochs: 3
+batch_size: 38
+epochs: 2
 
 # Optimizer and Scheduler
 optimizer:
@@ -55,18 +55,18 @@ optimizer:
   fused: True
   weight_decay: 0.1
   lr: 4e-4
-optimizer_in_bwd: False
+optimizer_in_bwd: True
 
 lr_scheduler:
   _component_: torchtune.training.lr_schedulers.get_cosine_schedule_with_warmup
   num_warmup_steps: 2000
 max_steps_per_epoch: null
-gradient_accumulation_steps: 4
+gradient_accumulation_steps: 1
 
 # Loss
 loss:
   _component_: torchtune.modules.loss.CEWithChunkedOutputLoss
-clip_grad_norm: 1.0
+#clip_grad_norm: 1.0
 
 # Training env
 device: cuda
