--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,11 @@ classifier =
         Intended Audience :: Science/Research
 	License :: OSI Approved :: Apache Software License
         Operating System :: POSIX
-	Programming Language :: Python :: 3.9
 	Programming Language :: Python :: 3.10
 	Programming Language :: Python :: 3.11
+	Programming Language :: Python :: 3.12
+	Programming Language :: Python :: 3.13
+	Programming Language :: Python :: 3.14
 
 [files]
 packages = bytellama
@@ -27,6 +29,7 @@ console_scripts =
     bytellama = bytellama.model:cli
 
 [options]
-python_requires = >=3.9
+python_requires = >=3.10
 install_requires =
     torchtune
+    torchao
