--- a/setup.cfg
+++ b/setup.cfg
@@ -25,11 +25,14 @@ max_line_length = 160
 exclude = tests/*
 
 [entry_points]
-console_scripts = 
+console_scripts =
     bytellama = bytellama.model:cli
+    bytellama-dataset = bytellama.dataset:cli
 
 [options]
 python_requires = >=3.10
 install_requires =
     torchtune
     torchao
+    datasets
+    rich
